--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "socket.io": "^4.7.4"
